Изм 1.5 реализация базовой навигации - стартовая страница назначена - реализован переход по кнопке сразу к фрагменту тестирования - реализована навигация по кнопке из главного фрагмента.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="label_training_summation">Подготовка - СЛОЖЕНИЕ</string>
     <string name="text_button_training">Перейти к обучению</string>
     <string name="text_button_testing">Перейти к упражнению</string>
+    <string name="text_button_start_summation">Тренировать сложение</string>
+    <string name="text_button_start_multiplication">Тренировать умножение</string>
 </resources>
